@@ -7,22 +7,12 @@ APPNAME := qxgedit
 # This is the debhelper compatibility version to use.
 #export DH_COMPAT=4
 
-# Set Qt5 environment for qtchooser.
-export QT_SELECT=5
-
-CFLAGS = -g
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-CFLAGS += -O0
-else
-CFLAGS += -O2
-endif
-
 configure: configure-stamp
 configure-stamp:
 	dh_testdir
 
 	# Add here commands to configure the package.
-	-$(MAKE) -f Makefile.git
+	./autogen.sh
 
 	./configure --prefix=/usr
 	# --- end custom part for configure
@@ -45,7 +35,7 @@ clean:
 	rm -f build-stamp configure-stamp
 
 	# Add here commands to clean up after the build process.
-	-$(MAKE) -f Makefile.git clean
+	./autogen.sh clean
 	# --- end custom part for cleaning up
 
 	dh_clean
